# Robotics_RLproject

./: README.md  graph.txt  ins.txt
devel/: .catkin  setup.sh
devel/lib/ballPose/: getBallPose
devel/lib/ball_pose/: get_ball_pose  get_ball_pose.cpp  shoot_ball
devel/lib/pkgconfig/: ballPose.pc  ball_pose.pc  graphic.pc  move_pkg.pc  robot_train.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc
devel/lib/python3/dist-packages/graphic_pkg/: __init__.py
devel/lib/robot_train/: action_graph.py  robot_move  robot_training
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/share/ballPose/cmake/: ballPoseConfig.cmake
devel/share/ball_pose/cmake/: ball_poseConfig.cmake
devel/share/graphic/cmake/: graphicConfig.cmake
devel/share/move_pkg/cmake/: move_pkgConfig.cmake
devel/share/robot_train/cmake/: robot_trainConfig.cmake
devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
src/ball_pose/: CMakeLists.txt  package.xml
src/ball_pose/launch/: get_ball_pose.launch  shoot_ball.launch
src/ball_pose/src/: get_ball_pose.cpp  shoot_ball.cpp
src/graphic/: CMakeLists.txt
src/robot_train/: CMakeLists.txt  package.xml
src/robot_train/launch/: robot_move.launch  robot_training.launch
src/robot_train/src/: 132.cpp  Q_learning.h  robot_move.cpp  ros_Q_learning.cpp
